[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
sysinfo = "0.27"  # or the latest version that supports your needs
