[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.9.0"
bincode = "1.3.3"
image = "0.21"
steganography = "1.0.2"

