[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = "0.6"  # Or the latest version
futures = "0.3"
tokio = { version = "1", features = ["full"] }
image = "0.21"
steganography = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sysinfo = "0.32.0"
rand = "0.8"
