[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
image = "0.21"
steganography = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sysinfo = "0.32.0"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }